   7 September 2014
Changed JSON object mapping. 
    {} is (0,)
    {"key":123} is ((key.123),)
    {"k1":true,"K2":"key 2"} is ((K2..key 2)+(k1.true),)
So [] becomes (,)
   [{}] becomes (,(0,)) which is (,0,)
   [{},{}] becomes (,(0,) (0,))

   6 September 2014
Added atomicity checks in jsn where string argument is expected.
Nevertheless, jsn is not validating. Garbage in, garbage out.

   1 September 2014
Decimals in floating point numbers (JSON) were not counted correctly.

  29 August 2014
json.c: Negative numbers now interpreted as numbers, not strings.

  28 August 2014
Tested json.c. Now correctly handles \uXXXX and control characters.
The latter inspired by 
http://www.bennadel.com/blog/2576-testing-which-ascii-characters-break-json-javascript-object-notation-parsing.htm
TODO 8232 (Line Separator) 8233 (Paragraph Separator) are also control characters, but not catched in json.c

   6 August 2014
Better handling of SGML (<?...>) and XML (<?...?>) processing instructions

  18 June 2014
New case conversion based on UnicodeData.txt 10-03-2014 18:20:00 

  10 June 2014
casesensitivehash: explicit cast to signed char.

  22 May 2014
img^jpg:(img^jpg)^?n failed, while img+jpg:(img+jpg)^?n succeeded. Now they both succeed.

  16 May 2014
1\La+1\Lb crashed due to stack overflow. Test ~1 in f5 solves the problem.

   6 May 2014
Increased a buffer size to solve segmentation fault problem with 64-bit
version when evaluating roots of some big numbers, for example
10090000004431^1/2

   3 May 2014
a^(b+c+d+e)*f^(g+h):?*?^(%+[<3)*? failed to succeed. If the first found
sublist (b+c+d+e in this example) failed to match the pattern, other sublists
where not tried.

   22 April 2014
(xml.c) The &&; sequence to escape & is no good, because &amp;&amp;; after a
full round trip ends up as & using this scheme. Decide to use the DEL character
(ASCII 127) instead and see whether that goes.. This character is forbidden or